# mkk-luna-test-task

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile
docker/rabbitmq/: definitions.json
src/mkk/: main.py
src/mkk/adapters/database/: models.py
src/mkk/domain/: models.py
src/mkk/infrastructure/: database.py
src/mkk/infrastructure/migrations/: env.py
src/mkk/infrastructure/migrations/versions/: 76d0212b1f42_new_constrait.py  9dc33d9b5574_rename_url_to_webhookurl.py  b82952edfc55_init.py
src/mkk/infrastructure/resources/: broker.py  database.py
src/mkk/presentation/: amqp.py
src/mkk/presentation/web_api/: models.py  payments.py
tests/: conftest.py  test_api.py  test_broker.py
tests/unit/: test_api.py  test_broker.py
